css reset, fixed most pages. project portal needs re-spacing

--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -2,6 +2,7 @@
 body {
   position: relative;
   z-index: -1;
+  font-family: !important $font;
 }
 
 .header-container {
