--- a/src/styles/LoggedInHeader.scss
+++ b/src/styles/LoggedInHeader.scss
@@ -2,6 +2,7 @@
 body {
   position: relative;
   z-index: -1;
+  font-family: !important $font;
 }
 
 .logged-in-container-blue {
@@ -11,12 +12,12 @@ body {
 .logged-in-header-container,
 .logged-in-header-container-sub-1080,
 .logged-in-header-container-sub-725 {
-  font: $font;
   max-width: 1080px;
   max-height: 75px;
   margin: 0 auto;
   display: grid;
   grid-template-rows: auto;
+  font-family: $font;
 }
 
 .logged-in-header-container {
@@ -65,6 +66,7 @@ LOGO
   font-weight: 700;
   margin: auto;
   margin-left: 0px;
+  font-family: $font;
 }
 
 /*
@@ -82,6 +84,7 @@ CREATE NEW PROJECT BTN
   grid-area: a;
   margin: auto;
   padding: 8px;
+  font-family: $font;
 }
 
 /*
