--- a/src/styles/Project.scss
+++ b/src/styles/Project.scss
@@ -26,7 +26,7 @@ DOCUMENT SETUP
   border: $border;
   position: relative;
   object-position: center;
-  top: -5px;
+  top: -3px;
 }
 
 .project-info,
@@ -63,6 +63,7 @@ IMAGE
 .project-image {
   height: 225px;
   object-fit: cover;
+  border: 1px solid $light-grey;
 }
 
 .project-edit-image {
