--- a/src/styles/ProjectPortalPage.scss
+++ b/src/styles/ProjectPortalPage.scss
@@ -147,6 +147,8 @@ ABOUT
 .about__heading {
   h1 {
     margin: 20px 0 5px 0;
+    font-size: 18px;
+    font-weight: 700;
   }
   p {
     margin: 0 0 20px 0;
