--- a/src/styles/SettingsPage.scss
+++ b/src/styles/SettingsPage.scss
@@ -49,7 +49,7 @@ SETTINGS LEFT_HAND MENU
   opacity: 0.75;
   position: absolute;
   margin: 0 auto;
-  margin-top: -155px;
+  margin-top: -150px;
   margin-left: 17px;
   display: none;
   overflow: hidden;
@@ -82,7 +82,9 @@ SETTINGS LEFT_HAND MENU
 .settings-name {
   color: $dark-grey;
   font-size: 16px;
-  font-weight: 900;
+  font-weight: 700;
+  margin-top: 30px;
+  margin-bottom: 20px;
 }
 
 .personal-details-button,
@@ -128,6 +130,7 @@ SETTINGS UPDATE PORTION
 
 .settings-headers {
   color: $dark-grey;
+  padding-bottom: 10px;
   border-bottom: 1px solid $light-grey;
 }
 
@@ -265,4 +268,5 @@ SKILLS
 
 .chosen-skills-grid-container {
   grid-area: i;
+  margin-bottom: 20px;
 }
